# figurer

./: .gitattributes  .gitmodules  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-abb1fa93f0074e742ff8.json  cache-v2-bfcbf68fa8fe8d95af0f.json  cmakeFiles-v1-26d804a96ef260a64237.json  codemodel-v2-201083ba0bfa656b323b.json  codemodel-v2-55dd0dc877549b603e69.json  directory-.-Debug-5f28169675412e40316b.json  directory-.-Debug-bdd260634b56e9c89aa2.json  directory-QCodeEditor-Debug-dbfd86f7ba4b379be4de.json  index-2023-06-24T17-11-34-0388.json  index-2023-07-02T22-22-16-0217.json  target-QCodeEditor-Debug-97bd44ebd0f802560989.json  target-figurer-project-Debug-2a4bd04b1c15366ec08e.json  target-figurer-project-Debug-7d3de3134168a3efd1b2.json  target-figurer-project_autogen_timestamp_deps-Debug-69d35b7df5b89e9b841d.json  target-figurer-project_autogen_timestamp_deps-Debug-8b8a05b1f5397acb3495.json
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-9cc4464a5a773d2c4b62.json  codemodel-v2-6ec6a5a3543a8278afa0.json  index-2023-07-02T22-21-50-0495.json  target-QCodeEditor-Debug-93ccb01fdff1e1452727.json  target-QCodeEditor_autogen-Debug-5e68520ab57d88fb1426.json  target-QCodeEditor_autogen_timestamp_deps-Debug-f55accff419c3456f9bf.json  target-figurer-project-Debug-d40f3b2d5ea960bd0a62.json  target-figurer-project_autogen-Debug-ca554e91687954572cf9.json
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QAbstractItemView.5D057541733D85E2.idx  QAbstractTextDocumentLayout.0BA963C691285949.idx  QCXXHighlighter.8E91E2C775472CBE.idx  QCXXHighlighter.cpp.B75C432E9A0FEB35.idx  QCXXHighlighter.hpp.6271B6102DC0EE5B.idx  QCodeEditor.0C2FBA9846F81800.idx  QCodeEditor.cpp.7E3F1C086CABA3EE.idx  QCodeEditor.hpp.50E13E55430856BF.idx  QCompleter.42F1640799BAEEC8.idx  QCursor.A16FFBADBBEC41EA.idx  QDebug.620C6FC36CB5AA8E.idx  QFontDatabase.35B6D8D1E9C5C4C4.idx  QFontMetrics.EB04C92368FB8EF3.idx  QFramedTextAttribute.58DD2B803C0034C3.idx  QFramedTextAttribute.cpp.D5FAF7A0C6382409.idx  QGLSLCompleter.38BC009D661C0DD1.idx  (+270 more)
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/QCodeEditor/: cmake_install.cmake
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/QCodeEditor/QCodeEditor_autogen/: deps  mocs_compilation.cpp
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/QCodeEditor/QCodeEditor_autogen/3YJK5W5UP7/: qrc_qcodeeditor_resources.cpp
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/QCodeEditor/QCodeEditor_autogen/R64DXGSG6A/: moc_QCXXHighlighter.cpp  moc_QCXXHighlighter.cpp.d  moc_QCodeEditor.cpp  moc_QCodeEditor.cpp.d  moc_QFramedTextAttribute.cpp  moc_QFramedTextAttribute.cpp.d  moc_QGLSLCompleter.cpp  moc_QGLSLCompleter.cpp.d  moc_QGLSLHighlighter.cpp  moc_QGLSLHighlighter.cpp.d  moc_QJSONHighlighter.cpp  moc_QJSONHighlighter.cpp.d  moc_QLanguage.cpp  moc_QLanguage.cpp.d  moc_QLineNumberArea.cpp  moc_QLineNumberArea.cpp.d  moc_QLuaCompleter.cpp  moc_QLuaCompleter.cpp.d  moc_QLuaHighlighter.cpp  moc_QLuaHighlighter.cpp.d  moc_QPythonCompleter.cpp  moc_QPythonCompleter.cpp.d  moc_QPythonHighlighter.cpp  moc_QPythonHighlighter.cpp.d  moc_QSyntaxStyle.cpp  moc_QSyntaxStyle.cpp.d  moc_QXMLHighlighter.cpp  moc_QXMLHighlighter.cpp.d
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/QCodeEditor_autogen/: deps
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/QCodeEditor_autogen/2GMS5QLMQ3/: moc_QLineNumberArea.cpp  moc_QLineNumberArea.cpp.d
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/figurer-project_autogen/: deps  mocs_compilation.cpp
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/figurer-project_autogen/3YJK5W5UP7/: qrc_resources.cpp
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/figurer-project_autogen/EWIEGA46WW/: moc_codeeditor.cpp  moc_codeeditor.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-figurer-project-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/figurer-project_autogen/include/: ui_mainwindow.h
figurer-project/: CMakeLists.txt  app.cpp  app.h  codeeditor.cpp  codeeditor.h  externalfile.cpp  externalfile.h  externalfileio.cpp  externalfileio.h  externalfileparserchooser.cpp  externalfileparserchooser.h  externalfilescanner.cpp  figureview.cpp  figureview.h  iexternalfileparser.cpp  iexternalfileparser.h  latexfileparser.cpp  latexfileparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  projectfileio.cpp  projectfileio.h  projectmanager.cpp  projectmanager.h  projecttools.cpp  projecttools.h  pycode.cpp  pythonhighlighter.cpp  pythonhighlighter.h  pythonthread.cpp  pythonthread.h  pythonuser.cpp  pythonworker.cpp  pythonworker.h  statuswidget.cpp  statuswidget.h  (+2 more)
figurer-project/Tests/: CMakeLists.txt  codeeditor_test.cpp  externalfilescanner_test.cpp  figureview_test.cpp  latexfileparser_test.cpp  project_test.cpp  projectfileio_test.cpp  projectmanager_test.cpp  pycode_test.cpp  pythonthread_test.cpp  statuswidget_test.cpp
figurer-project/example-paper/: main.aux  main.out  main.tex  testproj.json  textest.py
figurer-project/include/: app.h  codeeditor.h  externalfilescanner.h  figureview.h  iexternalfileparser.h  latexfileparser.h  mainwindow.h  projectmanager.h  pycode.h  pythonthread.h  pythonuser.h  statuswidget.h
figurer-project/plot-template/: base64figtext.txt  data.npz  data1.txt  data2.txt  template.ipynb
figurer-project/plot-template/.ipynb_checkpoints/: template-checkpoint.ipynb
figurer-project/resources/: resources.qrc
figurer-project/resources/python/: figure_image_data.py  scan_latex.py
